# 3d-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  codeql.yml
include/: camera.h  gui.h  input_manager.h  mesh.h  model.h  orbit_camera.h  resource_manager.h  shader.h  texture.h  texture2d.h
libs/glad/include/glad/: glad.h
resources/shaders/: fs.shader  lighting.fs  lighting.vs  vs.shader
src/: camera.cpp  gui.cpp  input_manager.cpp  main.cpp  mesh.cpp  model.cpp  orbit_camera.cpp  resource_manager.cpp  shader.cpp  texture.cpp  texture2d.cpp
